# Parkinsons_KB

./: .gitignore  README.md  app.py  ask.py  enrich.py  main.py  neo4j_loader_agent.ipynb  pdf_loader_agent.py  pyproject.toml  schema_aligner_agent.ipynb
agents/: canonicalizer_agent.py  clinical_trials_agent.py  embedder_agent.py  kegg_agent.py  neo4j_loader_agent.py  pdf_loader_agent.py  query_agent.py  schema_aligner_agent.py  string_agent.py
data/: parkinsons_kg.cypher
utils/: models.py
